src/main/java/com/example/demo/application/global/error/handling/exceptions/ResourceForbidden.java
package com.example.demo.application.global.error.handling.exceptions;

public class ResourceForbidden extends RuntimeException {

}
